# PoseModel

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  csvHandler.py  fileHandler.py  main.py  pyproject.toml  requirements
Evaluation/: Comparator.py  DoItAll.py  Evaluation.py  Visualization.py
Filters/: DLC_filters.py  Viterbi.py  filtering.py
Jupyter Notebook/: Error.ipynb  Modeling.ipynb  PennActionTest.ipynb  Richening_VAME_data.ipynb  VAME_data_test.ipynb  noise_robustness_test.ipynb
Kernel/: fileHandler.py
Kernel/Evaluation/: Visualization.py
Kernel/Preprocessing/: augmentor.py  equalizer.py
MATLAB Extensions/: Visualizer.m
Preprocessing/: De_fencing.py  augmentor.py
Test/: Test1.csv
configs/: base.yaml  benchmark.example.yaml
configs/skeletons/: primate18.json
docs/: architecture.md  benchmarking.md
legacy/: PoseModel  README-LEGACY.md  README.md
legacy/Jupyter Notebook/: Denoising_method_VAME_data.ipynb  Error.ipynb  Modeling (3).ipynb  Modeling.ipynb  PennActionTest.ipynb  animal_consistency_test.ipynb  clustering_experiment.ipynb  session_consistency_test.ipynb
legacy/Kernel/: main.py
legacy/Kernel/Evaluation/: Comparator.py  DoItAll.py  Evaluation.py
legacy/Kernel/Filters/: DLC_filters.py  filtering.py
legacy/MATLAB Extensions/: underTest.m  video_maker.m
src/posemodel/: __init__.py  cli.py  clustering.py  metrics.py  preprocessing.py  schema.py  training.py  windows.py
src/posemodel/benchmark/: __init__.py  candidates.py  data.py  evaluation.py  manifest.py  report.py  runner.py
src/posemodel/io/: __init__.py  dlc.py
tests/: conftest.py  test_benchmark.py  test_clustering.py  test_dlc.py  test_model.py  test_preprocessing.py  test_schema.py  test_training.py  test_windows.py
(+2 files in other folders)
